# openexr-core-rs

./: .gitignore  Cargo.toml  pyproject.toml
.cargo/: config.toml
crates/openexr-core/: Cargo.toml
crates/openexr-core-sys/: Cargo.toml  build.rs
crates/openexr-core-sys/src/: attrs.rs  errors.rs  lib.rs  openexr_ffi.rs  results.rs
crates/openexr-core/src/: attr_old.rs  base.rs  default.rs  lib.rs  reader.rs  results.rs  tiledesc.rs  user_data.rs  write.rs
crates/openexr-core/tests/: attributes.rs  base.rs  context.rs  read_bad_args.rs  read_bad_files.rs  read_meta.rs  read_open_scans.rs  read_scans.rs  (+1 more)
openexr-core/: Cargo.toml
openexr-core-rs/: Cargo.toml
openexr-core-rs/src/: attr.rs  attr_float_vector.rs  attr_old.rs  attr_simple.rs  attr_string_vector.rs  base.rs  context.rs  debug.rs  default.rs  file.rs  initializer.rs  lib.rs  read.rs  results.rs  tiledesc.rs  write.rs
openexr-core-rs/src/attributes/: attr.rs  channel.rs  common.rs  float_vector.rs  mod.rs  preview.rs  simple.rs  string.rs  string_vector.rs
openexr-core-rs/tests/: attributes.rs  base.rs  base_units.rs  context.rs  read.rs
openexr-core-rs/tests/shared/: mod.rs
openexr-core-sys/: Cargo.toml  build.rs  wrapper.h
openexr-core-sys/src/: lib.rs  openexr_core_wrapper.h
openexr-core/src/: attr.rs  attr_float_vector.rs  attr_simple.rs  attr_string_vector.rs  attributes.rs  base.rs  decode.rs  errors.rs  file.old.rs  file.rs  lib.rs  tiledesc.rs  version.rs
openexr-sys/: Cargo.toml  build.rs  wrapper.h
openexr-sys/src/: lib.rs
python/: parse_headers.py
python/exr-func-parser/: pyproject.toml
tools/exrinfo/: Cargo.toml
(+30 files in other folders)
