[package]
name = "openexr-core-sys"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "openexr_core_sys"
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true

[build-dependencies]
bindgen.workspace = true
anyhow.workspace = true
thiserror = "2.0.6"
